--- a/Angular/src/app/preview/preview.component.html
+++ b/Angular/src/app/preview/preview.component.html
@@ -1,38 +1,69 @@
 <div class="row">
-    <div class="col-lg-6">
+    <!-- <div class="col-md-6">
         <h3>Preview</h3>
-        <!-- <button (click)="download('maindiv')">download</button> -->
         <button (click)="download()">download</button>
-        <div  id="maindiv" style="height: 500px;" *ngIf="datas">
-            <img class="image img-fluid" src="{{ datas.previewpath }}">
+        <div id="maindiv" style="height: 500px;" *ngIf="datas" style="border: 3px solid red;">
+            <img class="image img-fluid" id="image" src="{{ datas.previewpath }}">
+
             <div ngDraggable [handle]="toNameDragger" class="toname">
                 <div #toNameDragger>
-                <h4 (click)="selectElement(0)" id="greetingto" class="text-center">{{datas.to}}</h4>
-            </div>
+                    <h4 (click)="selectElement(0)" id="greetingto"  >{{datas.to}} </h4>
+                </div>
             </div>
             <div ngDraggable [handle]="fromNameDragger" class="fromname">
-                <div #fromNameDragger >
-                    <span class="h5" >From <span class="h3 ms-2" (click)="selectElement(1)" id="greetingfrom">{{datas.from}}</span> </span >
+                <div #fromNameDragger>
+                 <span class="h3" (click)="selectElement(1)"  id="greetingfrom"> <span class="h5">From</span>  {{datas.from}}</span>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="col-md-6">
+        <h3>Preview</h3>
+        <button (click)="download()">download</button>
+        <!-- <button class="btn btn-primary mb-2" (click)="saveAsImage()">download</button> -->
+        <div id="maindiv" style="height: 400px;" *ngIf="datas" style="border: 3px solid red; ">
+            <img class="image " id="image" src="{{ datas.previewpath }}">
+
+            <div ngDraggable [handle]="toNameDragger" class="toname">
+                <div #toNameDragger>
+                    <h4 (click)="selectElement(0)" id="greetingto"  >{{datas.to}} </h4>
+                </div>
+            </div>
+            <div ngDraggable [handle]="fromNameDragger" class="fromname">
+                <div #fromNameDragger>
+                 <span class="h3"  (click)="selectElement(1)"  id="greetingfrom"> <span class="h5">From</span>  {{datas.from}}</span>
                 </div>
             </div>
         </div>
     </div>
     <div class="col-lg-6" *ngIf="currentElement">
         <h3>{{ currentElement.text }}</h3>
-        Font Family
-        <select class="form-control" (change)="fontChanged('fontfamily', $event)">
-            <option value="Times New Roman">Times New Roman</option>
-            <option value="Courier New">Courier New</option>
-        </select>
-
-        Font Size
-        <!-- <select  class="form-control" (change)="fontChanged('fontsize', $event)">
-            <option value="10px">10px</option>
-            <option value="20px">20px</option>
-        </select> -->
-        <input type="range" id="vol" name="vol" min="0" max="100" (change)="fontChanged('fontsize', $event)">
-
-        Color
-        <input type="color" (change)="fontChanged('color', $event)" />
+        <div class="row">
+            <div class="col-lg-4 col-12">
+                <h6>Font Family</h6>
+                <select class="form-control" (change)="fontChanged('fontfamily', $event)">
+                    <option value="0">Select</option>
+                    <option value="Times New Roman">Times New Roman</option>
+                    <option value="Courier New">Courier New</option>
+                </select>
+              </div>
+        
+              <div class="col-lg-4 col-6">
+                <h6>Font Size</h6>
+                <!-- <select  class="form-control" (change)="fontChanged('fontsize', $event)">
+                    <option value="10px">10px</option>
+                    <option value="20px">20px</option>
+                </select> -->
+                <input type="range" id="vol" name="vol" min="0" max="100" (change)="fontChanged('fontsize', $event)">
+              </div>
+              <div class="col-lg-4 col-6">
+                <h6>Color</h6>
+                <input type="color" (change)="fontChanged('color', $event)" />
+              </div>
+        
+                
+        </div>
     </div>
+    
 </div>
